--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <artifactId>ojdbc8</artifactId>
       <version>12.2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.1.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
